<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>AleksandrIablonskikh</artifactId>
    <version>1.0-SNAPSHOT</version>
    <groupId>com.epam.tc</groupId>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven-surefire-plugin.suiteXmlFile>
            ${project.build.testOutputDirectory}/testng/runAllTests.xml
        </maven-surefire-plugin.suiteXmlFile>

        <checkstyle.version>8.42</checkstyle.version>
        <testng.version>7.4.0</testng.version>
        <assertj-core.version>3.4.1</assertj-core.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <allure.version>2.13.2</allure.version>
        <aspectj.version>1.9.5</aspectj.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.2</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>

                </dependencies>
                <configuration>
                    <configLocation>
                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${maven-surefire-plugin.suiteXmlFile}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
<!--                <configuration>-->
<!--                    <source>1.11</source>-->
<!--                    &lt;!&ndash;                    <target>1.11</target>&ndash;&gt;-->
<!--                </configuration>-->
            </plugin>
        </plugins>
    </build>

    <profiles>
<!--        <profile>-->
<!--            <id>runAddAndSubtractTests</id>-->
<!--&lt;!&ndash;            <activation>&ndash;&gt;-->
<!--&lt;!&ndash;                <activeByDefault>true</activeByDefault>&ndash;&gt;-->
<!--&lt;!&ndash;            </activation>&ndash;&gt;-->
<!--            <properties>-->
<!--                <maven-surefire-plugin.suiteXmlFile>-->
<!--                    ${project.build.testOutputDirectory}/testng/runAddAndSubtractTests.xml-->
<!--                </maven-surefire-plugin.suiteXmlFile>-->
<!--            </properties>-->
<!--        </profile>-->
        <profile>
            <id>runHW4Tests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
<!--                <maven-surefire-plugin.suiteXmlFile>-->
<!--                    ${project.build.testOutputDirectory}/testng/hw4.class.suite.xml-->
<!--                </maven-surefire-plugin.suiteXmlFile>-->
                <testng.suite.file>
                    ${project.build.testOutputDirectory}/testng/hw4.class.suite.xml
                </testng.suite.file>
            </properties>
        </profile>
<!--        <profile>-->
<!--            <id>runAllTests</id>-->
<!--            <properties>-->
<!--                <maven-surefire-plugin.suiteXmlFile>-->
<!--                    ${project.build.testOutputDirectory}/testng/runAllTests.xml-->
<!--                </maven-surefire-plugin.suiteXmlFile>-->
<!--            </properties>-->
<!--        </profile>-->
<!--        <profile>-->
<!--            <id>runMultiplyAndDivideTests</id>-->
<!--            <properties>-->
<!--                <maven-surefire-plugin.suiteXmlFile>-->
<!--                    ${project.build.testOutputDirectory}/testng/runMultiplyAndDivideTests.xml-->
<!--                </maven-surefire-plugin.suiteXmlFile>-->
<!--            </properties>-->
<!--        </profile>-->
        <profile>
            <id>runHW3Tests</id>
            <properties>
                <maven-surefire-plugin.suiteXmlFile>
                    ${project.build.testOutputDirectory}/testng/runHW3Tests.xml
                </maven-surefire-plugin.suiteXmlFile>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.9.5</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>2.13.2</version>
            <scope>test</scope>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>calculator</groupId>-->
        <!--            <artifactId>calculator</artifactId>-->
        <!--            <scope>system</scope>-->
        <!--            <version>1.0</version>-->
        <!--            <systemPath>src/lib/calculator-1.0.jar</systemPath>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>4.4.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-api</artifactId>
            <version>4.0.0-alpha-7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>6.9.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>4.0.0-alpha-7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-support</artifactId>
            <version>3.141.59</version>
        </dependency>
    </dependencies>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>